PLATFORM-6217 | Add admin endpoint for session creation
We need an endpoint that will allow us to issue cookie for given identity without requesting password. This endpoint should be available only through internal network, and therefore it doesn't need to regenerate CSRF token when issuing new cookie.
