# internal/httpclient/api/openapi.yaml
@@ -1841,6 +1841,45 @@ paths:
         sessions tha belongs to a given Identity.
       tags:
       - v0alpha1
+    get:
+      description: |-
+        This endpoint is useful for:
+
+        Issuing session or session token for a given identity without authenticating
+      operationId: adminIdentitySession
+      parameters:
+      - description: ID is the identity's ID.
+        explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/successfulAdminIdentitySession'
+          description: successfulAdminIdentitySession
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/jsonError'
+          description: jsonError
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/jsonError'
+          description: jsonError
+      security:
+      - oryAccessToken: []
+      summary: Calling this endpoint issues a session for a given identity.
+      tags:
+      - v0alpha1
   /sessions/whoami:
     get:
       description: |-
@@ -3968,6 +4007,129 @@ components:
       required:
       - email
       - method
+      type: object
+    successfulAdminIdentitySession:
+      example:
+        session_token: session_token
+        identity:
+          recovery_addresses:
+          - updated_at: 2000-01-23T04:56:07.000+00:00
+            created_at: 2000-01-23T04:56:07.000+00:00
+            id: id
+            value: value
+            via: via
+          - updated_at: 2000-01-23T04:56:07.000+00:00
+            created_at: 2000-01-23T04:56:07.000+00:00
+            id: id
+            value: value
+            via: via
+          traits: ""
+          updated_at: 2000-01-23T04:56:07.000+00:00
+          credentials:
+            key:
+              updated_at: 2000-01-23T04:56:07.000+00:00
+              identifiers:
+              - identifiers
+              - identifiers
+              created_at: 2000-01-23T04:56:07.000+00:00
+              type: type
+              config: '{}'
+          verifiable_addresses:
+          - updated_at: 2014-01-01T23:28:56.782Z
+            verified_at: 2000-01-23T04:56:07.000+00:00
+            verified: true
+            created_at: 2014-01-01T23:28:56.782Z
+            id: id
+            value: value
+            status: status
+            via: via
+          - updated_at: 2014-01-01T23:28:56.782Z
+            verified_at: 2000-01-23T04:56:07.000+00:00
+            verified: true
+            created_at: 2014-01-01T23:28:56.782Z
+            id: id
+            value: value
+            status: status
+            via: via
+          schema_id: schema_id
+          state_changed_at: 2000-01-23T04:56:07.000+00:00
+          created_at: 2000-01-23T04:56:07.000+00:00
+          schema_url: schema_url
+          id: id
+          state: ""
+        session:
+          expires_at: 2000-01-23T04:56:07.000+00:00
+          identity:
+            recovery_addresses:
+            - updated_at: 2000-01-23T04:56:07.000+00:00
+              created_at: 2000-01-23T04:56:07.000+00:00
+              id: id
+              value: value
+              via: via
+            - updated_at: 2000-01-23T04:56:07.000+00:00
+              created_at: 2000-01-23T04:56:07.000+00:00
+              id: id
+              value: value
+              via: via
+            traits: ""
+            updated_at: 2000-01-23T04:56:07.000+00:00
+            credentials:
+              key:
+                updated_at: 2000-01-23T04:56:07.000+00:00
+                identifiers:
+                - identifiers
+                - identifiers
+                created_at: 2000-01-23T04:56:07.000+00:00
+                type: type
+                config: '{}'
+            verifiable_addresses:
+            - updated_at: 2014-01-01T23:28:56.782Z
+              verified_at: 2000-01-23T04:56:07.000+00:00
+              verified: true
+              created_at: 2014-01-01T23:28:56.782Z
+              id: id
+              value: value
+              status: status
+              via: via
+            - updated_at: 2014-01-01T23:28:56.782Z
+              verified_at: 2000-01-23T04:56:07.000+00:00
+              verified: true
+              created_at: 2014-01-01T23:28:56.782Z
+              id: id
+              value: value
+              status: status
+              via: via
+            schema_id: schema_id
+            state_changed_at: 2000-01-23T04:56:07.000+00:00
+            created_at: 2000-01-23T04:56:07.000+00:00
+            schema_url: schema_url
+            id: id
+            state: ""
+          authenticated_at: 2000-01-23T04:56:07.000+00:00
+          active: true
+          id: id
+          issued_at: 2000-01-23T04:56:07.000+00:00
+      properties:
+        identity:
+          $ref: '#/components/schemas/identity'
+        session:
+          $ref: '#/components/schemas/session'
+        session_token:
+          description: |-
+            The Session Token
+
+            This field is only set when the session hook is configured as a post-registration hook.
+
+            A session token is equivalent to a session cookie, but it can be sent in the HTTP Authorization
+            Header:
+
+            Authorization: bearer ${session-token}
+
+            The session token is only issued for API flows, not for Browser flows!
+          type: string
+      required:
+      - identity
+      - session
       type: object
     successfulSelfServiceLoginWithoutBrowser:
       description: The Response for Login Flows via API
